# rari

./: Cargo.toml
crates/rari-deps/: Cargo.toml
crates/rari-deps/src/: error.rs  npm.rs
crates/rari-doc/src/docs/: build.rs
crates/rari-doc/src/helpers/: mod.rs
crates/rari-doc/src/html/: modifier.rs  sidebar.rs
crates/rari-doc/src/sidebars/: jsref.rs
crates/rari-doc/src/templ/: render.rs
crates/rari-doc/src/templ/templs/: inheritance_diagram.rs  mod.rs  sidebars.rs  web_ext_examples.rs
crates/rari-shared/: Cargo.toml
crates/rari-shared/src/: download.rs  error.rs
crates/rari-tools/: Cargo.toml
crates/rari-tools/src/: popularities.rs
crates/rari-types/src/: error.rs  io.rs  lib.rs
