[package]
name = "rari-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
    "gzip",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
] }
